pokecard component test added and passes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,8 @@
         "charizard",
         "curlies",
         "pokemoncard",
-        "pokemonlist"
+        "pokemonimg",
+        "pokemonlist",
+        "venusaur"
     ]
 }
